--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,3 +1,49 @@
+<ifModule mod_expires.c>
+ExpiresActive On
+ExpiresByType image/jpg "access plus 1 year"
+ExpiresByType image/jpeg "access plus 1 year"
+ExpiresByType image/gif "access plus 1 year"
+ExpiresByType image/ico "access plus 1 year"
+ExpiresByType image/png "access plus 1 year"
+ExpiresByType text/css "access plus 1 year"
+ExpiresByType application/pdf "access plus 1 month"
+ExpiresByType text/x-javascript "access plus 1 year"
+ExpiresByType text/javascript "access plus 1 year"
+ExpiresByType application/x-shockwave-flash "access plus 1 month"
+ExpiresByType image/x-icon "access plus 1 year"
+ExpiresDefault "access plus 2 days"
+ExpiresByType video/mp4 "access plus 1 year"
+ExpiresByType audio/mp3 "access plus 1 year"
+ExpiresByType video/ogg                 "access plus 1 year"
+ExpiresByType audio/ogg                 "access plus 1 year"
+ ExpiresByType font/truetype             "access plus 1 year"
+  ExpiresByType font/opentype             "access plus 1 year"
+  ExpiresByType application/x-font-woff   "access plus 1 year"
+  ExpiresByType image/svg+xml             "access plus 1 year"
+  ExpiresByType application/vnd.ms-fontobject "access plus 1 year"
+ ExpiresByType image/webp "access plus 1 year"
+ 
+</ifModule>
+<ifModule mod_headers.c>
+    # One year for image and video files
+    <filesMatch ".(flv|gif|ico|jpg|jpeg|mp4|mp3|mpeg|png|svg|swf|webp)$">
+        Header set Cache-Control "max-age=31536000, public"
+   Header set Last-Modified "Tue, 21 April 2019 00:00:00 GMT"
+    </filesMatch>
+
+    # One Year for JavaScript and PDF files
+    <filesMatch ".(js|pdf)$">
+        Header set Cache-Control "max-age=31536000, public"
+    Header set Last-Modified "Tue, 21 April 2019 00:00:00 GMT"
+     </filesMatch>
+
+    # One Year for CSS files
+    <filesMatch ".(css)$">
+        Header set Cache-Control "max-age=31536000, public"
+   Header set Last-Modified "Tue, 21 April 2019 00:00:00 GMT"
+    </filesMatch>
+
+</ifModule>
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
