--- a/php.ini
+++ b/php.ini
@@ -1,1 +1,6 @@
-ini_set('max_execution_time',0);
+upload_max_filesize = 200M
+post_max_size = 200M
+max_execution_time = 18000
+memory_limit = 1024M
+max_input_vars = 2000
+post_max_size = 300M
